# ftl2-runner

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.mmd  execution-flow.mmd  ftl2-runner-design.md  proposal-ftl2-event-streaming.md  receptor-test.md
ee/: .gitignore  Containerfile  Containerfile.dev  README.md  bindep.txt  execution-environment.yml  requirements.txt
ee/files/: example-script.py
examples/: README.md  file_operations.py  multi_task_playbook.yml  ping_playbook.yml  remote_ping.py  simple_ping.py
src/ftl2_runner/: __init__.py  __main__.py  adhoc.py  artifacts.py  capacity.py  events.py  exceptions.py  playbook.py  runner_context.py  streaming.py  worker.py
tests/: test_playbook_ansi.py  test_receptor_integration.py  test_worker_streaming.py
